experiments/a5/fbaf9c001246c568923b9b69645e5354f9a6f6/error
MESSAGE: Execution of "./build_llvm_project.sh" failed

STDOUT:
[362/3297] Copying clang's invpcidintrin.h...
[363/3297] Copying clang's keylockerintrin.h...
[364/3297] Copying clang's larchintrin.h...
[365/3297] Copying clang's llvm_libc_wrappers/assert.h...
[366/3297] Copying clang's lwpintrin.h...
[367/3297] Copying clang's lzcntintrin.h...
[368/3297] Copying clang's mm3dnow.h...
[369/3297] Copying clang's mm_malloc.h...
[370/3297] Copying clang's mmintrin.h...
[371/3297] Copying clang's movdirintrin.h...
[372/3297] Copying clang's msa.h...
[373/3297] Copying clang's mwaitxintrin.h...
[374/3297] Copying clang's nmmintrin.h...
[375/3297] Copying clang's openmp_wrappers/math.h...
[376/3297] Copying clang's pconfigintrin.h...
[377/3297] Copying clang's opencl-c.h...
[378/3297] Copying clang's pkuintrin.h...
[379/3297] Copying clang's pmmintrin.h...
[380/3297] Copying clang's popcntintrin.h...
[381/3297] Copying clang's ppc_wrappers/bmi2intrin.h...
[382/3297] Copying clang's ppc_wrappers/bmiintrin.h...
[383/3297] Copying clang's ppc_wrappers/emmintrin.h...
[384/3297] Copying clang's ppc_wrappers/immintrin.h...
[385/3297] Copying clang's ppc_wrappers/mm_malloc.h...
[386/3297] Copying clang's ppc_wrappers/mmintrin.h...
[387/3297] Copying clang's ppc_wrappers/nmmintrin.h...
[388/3297] Copying clang's ppc_wrappers/pmmintrin.h...
[389/3297] Copying clang's ppc_wrappers/smmintrin.h...
[390/3297] Copying clang's ppc_wrappers/x86intrin.h...
[391/3297] Copying clang's ppc_wrappers/tmmintrin.h...
[392/3297] Copying clang's ppc_wrappers/x86gprintrin.h...
[393/3297] Copying clang's ppc_wrappers/xmmintrin.h...
[394/3297] Copying clang's prfchwintrin.h...
[395/3297] Copying clang's ptwriteintrin.h...
[396/3297] Copying clang's prfchiintrin.h...
[397/3297] Copying clang's raointintrin.h...
[398/3297] Copying clang's rtmintrin.h...
[399/3297] Copying clang's rdseedintrin.h...
[400/3297] Copying clang's s390intrin.h...
[401/3297] Copying clang's rdpruintrin.h...
[402/3297] Copying clang's riscv_ntlh.h...
[403/3297] Copying clang's serializeintrin.h...
[404/3297] Copying clang's sha512intrin.h...
[405/3297] Copying clang's shaintrin.h...
[406/3297] Copying clang's sgxintrin.h...
[407/3297] Copying clang's velintrin_approx.h...
[408/3297] Copying clang's sm4intrin.h...
[409/3297] Copying clang's tbmintrin.h...
[410/3297] Copying clang's sm3intrin.h...
[411/3297] Copying clang's smmintrin.h...
[412/3297] Copying clang's tmmintrin.h...
[413/3297] Copying clang's tsxldtrkintrin.h...
[414/3297] Copying clang's uintrintrin.h...
[415/3297] Copying clang's velintrin.h...
[416/3297] Copying clang's vaesintrin.h...
[417/3297] Copying clang's vecintrin.h...
[418/3297] Copying clang's vpclmulqdqintrin.h...
[419/3297] Copying clang's waitpkgintrin.h...
[420/3297] Copying clang's wbnoinvdintrin.h...
[421/3297] Copying clang's velintrin_gen.h...
[422/3297] Copying clang's wasm_simd128.h...
[423/3297] Copying clang's xopintrin.h...
[424/3297] Copying clang's wmmintrin.h...
[425/3297] Copying clang's x86gprintrin.h...
[426/3297] Copying clang's x86intrin.h...
[427/3297] Copying clang's xmmintrin.h...
[428/3297] Copying clang's xsavecintrin.h...
[429/3297] Copying clang's xsaveintrin.h...
[430/3297] Copying clang's xtestintrin.h...
[431/3297] Copying clang's xsaveoptintrin.h...
[432/3297] Copying clang's xsavesintrin.h...
[433/3297] Building CXX object unittests/Support/DynamicLibrary/CMakeFiles/DynamicLibraryLib.dir/ExportedFuncs.cpp.o
[434/3297] Copying clang's __stddef_ptrdiff_t.h...
[435/3297] Building CXX object tools/clang/lib/Support/CMakeFiles/obj.clangSupport.dir/RISCVVIntrinsicUtils.cpp.o
[436/3297] Creating export file for Remarks
[437/3297] Bundling HTMLLogger resources
[438/3297] Copying clang's __stddef_size_t.h...
[439/3297] Copying clang's __stddef_unreachable.h...
[440/3297] Copying clang's __stddef_wchar_t.h...
[441/3297] Copying clang's __stddef_wint_t.h...
[442/3297] Copying clang's __stddef_rsize_t.h...
[443/3297] Copying clang's __stdarg___gnuc_va_list.h...
[444/3297] Copying clang's __stdarg___va_copy.h...
[445/3297] Copying clang's __stdarg_va_arg.h...
[446/3297] Copying clang's __stdarg_va_copy.h...
[447/3297] Copying clang's __stdarg_va_list.h...
[448/3297] Copying clang's __stddef_max_align_t.h...
[449/3297] Copying clang's __stddef_null.h...
[450/3297] Copying clang's __stddef_nullptr_t.h...
[451/3297] Copying clang's __stddef_offsetof.h...
[452/3297] Copying clang's float.h...
[453/3297] Copying clang's hlsl/hlsl_basic_types.h...
[454/3297] Copying clang's hlsl/hlsl_intrinsics.h...
[455/3297] Copying clang's inttypes.h...
[456/3297] Copying clang's iso646.h...
[457/3297] Copying clang's llvm_libc_wrappers/ctype.h...
[458/3297] Copying clang's llvm_libc_wrappers/stdio.h...
[459/3297] Copying clang's limits.h...
[460/3297] Copying clang's llvm_libc_wrappers/inttypes.h...
[461/3297] Copying clang's llvm_libc_wrappers/stdlib.h...
[462/3297] Copying clang's llvm_libc_wrappers/string.h...
[463/3297] Copying clang's llvm_libc_wrappers/time.h...
[464/3297] Copying clang's module.modulemap...
[465/3297] Copying clang's opencl-c-base.h...
[466/3297] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[467/3297] Copying clang's openmp_wrappers/complex...
[468/3297] Copying clang's openmp_wrappers/cmath...
[469/3297] Copying clang's openmp_wrappers/complex.h...
[470/3297] Copying clang's openmp_wrappers/complex_cmath.h...
[471/3297] Copying clang's openmp_wrappers/new...
[472/3297] Copying clang's sifive_vector.h...
[473/3297] Copying clang's stdalign.h...
[474/3297] Building CXX object lib/Support/CMakeFiles/LLVMSupport.dir/SmallVector.cpp.o
FAILED: lib/Support/CMakeFiles/LLVMSupport.dir/SmallVector.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++ -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -I/root/llvm-compile-time-tracker/llvm-project-build/lib/Support -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Support -I/root/llvm-compile-time-tracker/llvm-project-build/include -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fno-semantic-interposition -fvisibility-inlines-hidden -Werror=date-time -fno-lifetime-dse -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-nonnull -Wno-class-memaccess -Wno-redundant-move -Wno-pessimizing-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -Wno-misleading-indentation -Wctad-maybe-unsupported -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG -std=c++17  -fno-exceptions -funwind-tables -fno-rtti -MD -MT lib/Support/CMakeFiles/LLVMSupport.dir/SmallVector.cpp.o -MF lib/Support/CMakeFiles/LLVMSupport.dir/SmallVector.cpp.o.d -o lib/Support/CMakeFiles/LLVMSupport.dir/SmallVector.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/SmallVector.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/SmallVector.cpp:123:7: error: redefinition of ‘void* llvm::SmallVectorBase<Size_T>::replaceAllocation(void*, size_t, size_t, size_t)’
  123 | void *SmallVectorBase<Size_T>::replaceAllocation(void *NewElts, size_t TSize,
      |       ^~~~~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/SmallVector.cpp:112:7: note: ‘void* llvm::SmallVectorBase<Size_T>::replaceAllocation(void*, size_t, size_t, size_t)’ previously declared here
  112 | void *SmallVectorBase<Size_T>::replaceAllocation(void *NewElts, size_t TSize,
      |       ^~~~~~~~~~~~~~~~~~~~~~~
[475/3297] Copying clang's stdbool.h...
[476/3297] Copying clang's stdarg.h...
[477/3297] Copying clang's stdatomic.h...
[478/3297] Copying clang's stddef.h...
[479/3297] Copying clang's stdint.h...
ninja: build stopped: subcommand failed.


STDERR:
Command exited with non-zero status 1
2.18user 0.90system 0:00.83elapsed 371%CPU (0avgtext+0avgdata 87572maxresident)k
0inputs+58848outputs (2111major+327091minor)pagefaults 0swaps
